# gdivelog-suunto-plugin

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.in  gdivelog-suunto-plugin.prj  gdivelog-suunto-plugin.pws  gdivelog-suunto-plugin.spec.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: POTFILES.in
src/: Makefile.am  Makefile.in  main.c
